# aspnetcore.api/CASNApp.API/Controllers/DefaultApi.cs
@@ -97,7 +97,7 @@ namespace CASNApp.API.Controllers
             var appointmentEntities = await dbContext.Appointment
                 .AsNoTracking()
                 .Include(a => a.Drives)
-                .Include(a => a.Patient)
+                .Include(a => a.Caller)
                 .Where(a => a.AppointmentDate >= start &&
                             a.AppointmentDate <= end &&
                             a.IsActive)
